--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       padding: 0;
       overflow: hidden;
       background-color: #87CEEB;
+      touch-action: none; /* Mobilde kaydırmayı engeller */
     }
     canvas {
       display: block;
@@ -19,17 +20,22 @@
 </head>
 <body>
   <!-- Görseller internetten alınacak -->
-   <img id="face1" src="assets/fatma1.png" style="display: none;">
-   <img id="face2" src="assets/yunus1.png" style="display: none;">
+  <img id="face1" src="https://i.hizliresim.com/r6bm8a9.png" style="display: none;">
+  <img id="face2" src="https://i.hizliresim.com/37shbzf.png" style="display: none;">
   
   <canvas id="gameCanvas"></canvas>
 
   <script>
     const canvas = document.getElementById("gameCanvas");
     const ctx = canvas.getContext("2d");
-    canvas.width = window.innerWidth || document.documentElement.clientWidth || document.body.clientWidth;
-    canvas.height = window.innerHeight || document.documentElement.clientHeight || document.body.clientHeight;
 
+    // Canvas boyutlarını dinamik olarak ayarla
+    function resizeCanvas() {
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+    }
+    resizeCanvas();
+    window.addEventListener("resize", resizeCanvas);  // Ekran boyutu değiştiğinde tekrar ayarla
 
     const face1 = document.getElementById("face1");
     const face2 = document.getElementById("face2");
@@ -69,163 +75,41 @@
     let hearts = [];
     let obstacles = [];
 
-    function createLevel(level) {
-		  const baseY = canvas.height - 100;
+    // Kontrol tuşları için mobilde kullanılacak dokunmatik olayları
+    let touchStartX = 0;
+    let touchStartY = 0;
 
-		  platforms = [];
-		  hearts = [];
-		  obstacles = [];
+    canvas.addEventListener("touchstart", function (e) {
+      touchStartX = e.touches[0].clientX;
+      touchStartY = e.touches[0].clientY;
+    });
 
-		  const obstacleCount = 4 + (level - 1) * 2; // Engellerin sayısı: İlk seviyede 4, her seviyede 2 artar
+    canvas.addEventListener("touchmove", function (e) {
+      const touchMoveX = e.touches[0].clientX;
+      const touchMoveY = e.touches[0].clientY;
 
-		  // Level yapılandırması
-		  switch (level) {
-			case 1:
-			  platforms = [
-				{ x: 0, y: baseY, width: canvas.width, height: 100 },
-				{ x: 200, y: baseY - 100, width: 150, height: 20 },
-				{ x: 400, y: baseY - 180, width: 150, height: 20 },
-				{ x: 650, y: baseY - 250, width: 150, height: 20 },
-				{ x: 900, y: baseY - 180, width: 150, height: 20 },
-				{ x: 1150, y: baseY - 100, width: 150, height: 20 }
-			  ];
-			  hearts = [
-				{ x: 240, y: baseY - 140, collected: false, type: 'normal' },
-				{ x: 460, y: baseY - 220, collected: false, type: 'normal' },
-				{ x: 720, y: baseY - 290, collected: false, type: 'strong' },
-				{ x: 980, y: baseY - 220, collected: false, type: 'normal' },
-				{ x: 1240, y: baseY - 140, collected: false, type: 'strong' }
-			  ];
-			  break;
-
-			case 2:
-			  platforms = [
-				{ x: 0, y: baseY, width: canvas.width, height: 100 },
-				{ x: 100, y: baseY - 120, width: 120, height: 20 },
-				{ x: 350, y: baseY - 200, width: 120, height: 20 },
-				{ x: 600, y: baseY - 280, width: 120, height: 20 },
-				{ x: 850, y: baseY - 200, width: 120, height: 20 },
-				{ x: 1100, y: baseY - 120, width: 120, height: 20 }
-			  ];
-			  hearts = [
-				{ x: 130, y: baseY - 160, collected: false, type: 'normal' },
-				{ x: 370, y: baseY - 240, collected: false, type: 'strong' },
-				{ x: 620, y: baseY - 320, collected: false, type: 'normal' },
-				{ x: 870, y: baseY - 240, collected: false, type: 'strong' }
-			  ];
-			  break;
-
-			case 3:
-			  platforms = [
-				{ x: 0, y: baseY, width: canvas.width, height: 100 },
-				{ x: 150, y: baseY - 120, width: 120, height: 20 },
-				{ x: 400, y: baseY - 200, width: 120, height: 20 },
-				{ x: 650, y: baseY - 280, width: 120, height: 20 },
-				{ x: 900, y: baseY - 200, width: 120, height: 20 },
-				{ x: 1150, y: baseY - 120, width: 120, height: 20 },
-				{ x: 1400, y: baseY - 300, width: 120, height: 20 }
-			  ];
-			  hearts = [
-				{ x: 180, y: baseY - 160, collected: false, type: 'strong' },
-				{ x: 430, y: baseY - 240, collected: false, type: 'normal' },
-				{ x: 680, y: baseY - 320, collected: false, type: 'normal' },
-				{ x: 930, y: baseY - 240, collected: false, type: 'strong' },
-				{ x: 1180, y: baseY - 160, collected: false, type: 'normal' }
-			  ];
-			  break;
-
-			case 4:
-			  platforms = [
-				{ x: 0, y: baseY, width: canvas.width, height: 100 },
-				{ x: 100, y: baseY - 120, width: 120, height: 20 },
-				{ x: 350, y: baseY - 200, width: 120, height: 20 },
-				{ x: 600, y: baseY - 280, width: 120, height: 20 },
-				{ x: 850, y: baseY - 200, width: 120, height: 20 },
-				{ x: 1100, y: baseY - 120, width: 120, height: 20 },
-				{ x: 1350, y: baseY - 320, width: 120, height: 20 },
-				{ x: 1600, y: baseY - 200, width: 120, height: 20 }
-			  ];
-			  hearts = [
-				{ x: 150, y: baseY - 160, collected: false, type: 'strong' },
-				{ x: 400, y: baseY - 240, collected: false, type: 'normal' },
-				{ x: 650, y: baseY - 320, collected: false, type: 'strong' },
-				{ x: 900, y: baseY - 240, collected: false, type: 'normal' },
-				{ x: 1150, y: baseY - 160, collected: false, type: 'normal' },
-				{ x: 1400, y: baseY - 80, collected: false, type: 'strong' }
-			  ];
-			  break;
-
-			case 5:
-			  platforms = [
-				{ x: 0, y: baseY, width: canvas.width, height: 100 },
-				{ x: 50, y: baseY - 100, width: 150, height: 20 },
-				{ x: 250, y: baseY - 200, width: 150, height: 20 },
-				{ x: 500, y: baseY - 300, width: 150, height: 20 },
-				{ x: 750, y: baseY - 200, width: 150, height: 20 },
-				{ x: 1000, y: baseY - 100, width: 150, height: 20 },
-				{ x: 1250, y: baseY - 150, width: 150, height: 20 },
-				{ x: 1500, y: baseY - 250, width: 150, height: 20 },
-				{ x: 1750, y: baseY - 350, width: 150, height: 20 }
-			  ];
-			  hearts = [
-				{ x: 100, y: baseY - 120, collected: false, type: 'strong' },
-				{ x: 300, y: baseY - 220, collected: false, type: 'normal' },
-				{ x: 550, y: baseY - 320, collected: false, type: 'strong' },
-				{ x: 800, y: baseY - 240, collected: false, type: 'normal' },
-				{ x: 1050, y: baseY - 160, collected: false, type: 'normal' },
-				{ x: 1300, y: baseY - 80, collected: false, type: 'strong' },
-				{ x: 1550, y: baseY - 220, collected: false, type: 'normal' }
-			  ];
-			  break;
-		  }
-
-		  // Engel yaratma
-		  for (let i = 0; i < obstacleCount; i++) {
-			const obstacle = {
-			  x: Math.random() * (canvas.width - 30),
-			  y: Math.random() * (canvas.height - 200),
-			  width: 30,
-			  height: 30,
-			  color: 'red'
-			};
-			obstacles.push(obstacle);
-			}
-		}
-
-    createLevel(level);
-
-    let keys = {};
-    window.addEventListener("keydown", e => keys[e.key] = true);
-    window.addEventListener("keyup", e => keys[e.key] = false);
-
-    // Her seviyede gereken puan eşiği
-    const levelThresholds = [50, 120, 205, 275, 295]; // 5 seviyede sırasıyla gereken puanlar
-
-    function checkLevelTransition() {
-      // Seviye geçişi için gerekli olan puanı kontrol ediyoruz
-      if (score >= levelThresholds[level - 1] && level < levelThresholds.length && !levelTransition) {
-        // Seviye atlama
-        level++;
-        levelTransition = true;
-        transitionTimer = 120;
-        levelMessageTimer = 120;
-        loveMessageTimer = 60;
-        loveMessage = "Aşk Seviyeniz Arttı! <3";
-    
-        // Seviye atlama sonrası 1.5 saniye bekleyip yeni seviyeyi oluşturuyoruz
-        setTimeout(() => {
-          createLevel(level);
-          character1.x = 200;
-          character1.y = canvas.height - 200;
-          character1.velX = 0;
-          character1.velY = 0;
-          levelTransition = false;
-          invincibilityTime = 0;
-          keys = {};
-        }, 1500);
+      if (touchMoveX < touchStartX - 20) {
+        keys["a"] = true;  // Sol hareket
+        keys["d"] = false;
+      } else if (touchMoveX > touchStartX + 20) {
+        keys["d"] = true;  // Sağ hareket
+        keys["a"] = false;
       }
-    }
 
+      if (touchMoveY < touchStartY - 20 && character1.grounded) {
+        keys["w"] = true;  // Zıplama
+      } else {
+        keys["w"] = false;
+      }
+    });
+
+    canvas.addEventListener("touchend", function (e) {
+      keys["a"] = false;
+      keys["d"] = false;
+      keys["w"] = false;
+    });
+
+    // Diğer fonksiyonlarınız burada...
 
     function updateCharacters() {
       character1.velY += gravity;
@@ -245,75 +129,46 @@
         }
       }
 
-      if (character1.y > canvas.height - character1.height) {
-        character1.y = canvas.height - character1.height;
-        character1.velY = 0;
-        character1.grounded = true;
+      character1.velX *= friction;
+      character1.x += character1.velX;
+      character1.y += character1.velY;
+
+      character1.grounded = false;
+      for (let p of platforms) {
+        if (
+          character1.x + character1.width > p.x &&
+          character1.x < p.x + p.width &&
+          character1.y + character1.height > p.y &&
+          character1.y + character1.height < p.y + p.height + character1.velY
+        ) {
+          character1.y = p.y - character1.height;
+          character1.velY = 0;
+          character1.grounded = true;
+          character1.jumping = false;
+          doubleJumpAvailable = true;
+        }
       }
 
       if (character1.x < 0) character1.x = 0;
       if (character1.x + character1.width > canvas.width) character1.x = canvas.width - character1.width;
-
-      character1.x += character1.velX;
-      character1.velX *= friction;
-
-      character1.y += character1.velY;
-    }
-
-    function update() {
-      updateCharacters();
-      checkLevelTransition();
-
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-      // Seviyeleri ve karakterleri çiziyoruz
-      ctx.drawImage(face1, character1.x, character1.y, character1.width, character1.height);
-
-      // Engelleri çiz
-      obstacles.forEach(obstacle => {
-        ctx.fillStyle = obstacle.color;
-        ctx.fillRect(obstacle.x, obstacle.y, obstacle.width, obstacle.height);
-      });
-
-      // Platformları çiz
-      platforms.forEach(platform => {
-        ctx.fillStyle = "brown";
-        ctx.fillRect(platform.x, platform.y, platform.width, platform.height);
-      });
-
-      // Kalp öğelerini çiz
-      hearts.forEach(heart => {
-        ctx.fillStyle = heart.type === 'strong' ? "red" : "pink";
-        ctx.beginPath();
-        ctx.arc(heart.x, heart.y, 15, 0, Math.PI * 2);
-        ctx.fill();
-      });
-
-      // Canları yazdır
-      ctx.fillStyle = "black";
-      ctx.font = "20px Arial";
-      ctx.fillText("Canlar: " + lives, 20, 30);
-
-      // Skor ve seviyeyle ilgili mesajları yazdır
-      ctx.fillText("Skor: " + score, 20, 60);
-      ctx.fillText("Seviye: " + level, 20, 90);
-
-      // Seviyenin geçiş mesajı varsa, göster
-      if (levelMessageTimer > 0) {
-        ctx.font = "40px Arial";
-        ctx.fillText(levelMessage, canvas.width / 2 - ctx.measureText(levelMessage).width / 2, canvas.height / 2);
-        levelMessageTimer--;
+      if (character1.y + character1.height > canvas.height) {
+        character1.y = canvas.height - character1.height;
+        character1.grounded = true;
+        character1.jumping = false;
+        character1.velY = 0;
+        doubleJumpAvailable = true;
       }
 
-      if (loveMessageTimer > 0) {
-        ctx.font = "40px Arial";
-        ctx.fillText(loveMessage, canvas.width / 2 - ctx.measureText(loveMessage).width / 2, canvas.height / 2 + 50);
-        loveMessageTimer--;
-      }
+      character2.x = character1.x + character1.width; // Karakterler bitişik olmalı
+      character2.y = character1.y;
     }
+
+    // Diğer oyun fonksiyonlarınız ve oyun döngüsü...
 
     function gameLoop() {
-      update();
+      updateCharacters();
+      // Diğer oyun işlemleri...
+      draw();
       requestAnimationFrame(gameLoop);
     }
 
