--- a/index.html
+++ b/index.html
@@ -18,17 +18,18 @@
     /* Dokunmatik butonlar için stil */
     .touch-controls {
       position: absolute;
-      bottom: 20px;
+      bottom: 10%;
       left: 50%;
       transform: translateX(-50%);
       display: flex;
       justify-content: space-between;
-      width: 60%;
+      width: 70%;
       padding: 10px;
+      z-index: 1;
     }
     .touch-btn {
-      width: 60px;
-      height: 60px;
+      width: 50px;
+      height: 50px;
       border-radius: 50%;
       background-color: rgba(0, 0, 0, 0.5);
       color: white;
@@ -55,6 +56,8 @@
   <script>
     const canvas = document.getElementById("gameCanvas");
     const ctx = canvas.getContext("2d");
+
+    // Ekran boyutuna göre canvas boyutlarını ayarla
     canvas.width = window.innerWidth;
     canvas.height = window.innerHeight;
 
